--- a/.github/workflows/task_12.yml
+++ b/.github/workflows/task_12.yml
@@ -29,7 +29,10 @@ jobs:
         run: python -m pip install pytest 
 
       - name: Run test
-        run: pytest
+        run: |
+          cd task_12
+          pytest
+
 
 
 
